CB-33516 Use operation type to skip fallback chain in GCP resource checking
Instead of always trying global → regional → zonal endpoints, store the
operation scope (ZONAL/REGIONAL/GLOBAL) from the initial API response and
dispatch directly to the correct endpoint, reducing API calls from 3 to 1
for the common zonal case.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>